@@ -1,6 +1,7 @@
 4 May 2023: Wouter
 	- Fix #885: Error: util/configlexer.c: No such file or directory,
 	  adds error messages explaining to install flex and bison.
+	- Fix to remove unused whitespace from acx_nlnetlabs.m4 and config.h.
 
 1 May 2023: George
 	- Merge #722 from David 'eqvinox' Lamparter: NAT64 support.
